# python-third-party-license-file-generator

./: Dockerfile  Dockerfile.dockerignore  LICENSE  README.md  THIRDPARTYLICENSES  build-tag-and-push.sh  check_third_party_licenses.py  docker-entrypoint.sh  pyproject.toml  requirements.txt  setup.py  test.sh
third_party_license_file_generator/: __main__.py  site_packages.py
third_party_license_file_generator/licenses/: __init__.py  agpl_1_0.py  agpl_3_0.py  apache_1_1.py  apache_2_0.py  bsd_2_clause.py  bsd_3_clause.py  gpl_2_0.py  gpl_3_0.py  isc.py  lgpl_2_1.py  lgpl_3_0.py  mit.py  mpl_1_0.py  mpl_1_1.py  mpl_2_0.py  pil.py  python_2_0.py  zope_1_1.py  zope_2_0.py  zope_2_1.py
