[project]
name = "third-party-license-file-generator"
version = "2025.12.12"
description = "The Python third_party_license_file_generator is aimed at distilling down the appropriate license for one or many pip \"requirements\" files into a single file; it supports Python2.7 and Python3."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dom-toml>=2.1.0 ; python_full_version >= '3'",
    "pyyaml<5.4 ; python_full_version < '3'",
    "pyyaml>=5.4 ; python_full_version >= '3'",
    "requests>=2.25 ; python_full_version < '3'",
    "requests>=2.25 ; python_full_version >= '3'",
]
